# CasperVault

./: .env.example  .gitignore  DEPLOYMENT_READY.md  FIX_ALL_ERRORS.md  Makefile  PROJECT_STRUCTURE.md  QUICK_FIX_CHECKLIST.md  README.md  SECURITY.md  generate-cli-wallet.sh
contracts/: .gitignore  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_STATUS.txt  Makefile  Odra.toml  TESTNET_DEPLOYMENT.md  VAULT_MANAGER_REFERENCE.md  build.sh  deploy-direct.sh  deploy.sh  flatten_structs.sh  livenet-deploy.sh  quick-deploy.sh  testnet-deploy.sh
contracts/src/: lib.rs
contracts/src/core/: liquid_staking.rs  mod.rs  strategy_router.rs  vault_manager.rs  vault_manager.rs.backup  yield_aggregator.rs
contracts/src/mocks/: mock_dex.rs  mod.rs
contracts/src/strategies/: crosschain_strategy.rs  dex_strategy.rs  lending_strategy.rs  mod.rs  strategy_interface.rs
contracts/src/tokens/: cv_cspr.rs  lst_cspr.rs  mod.rs
contracts/src/types/: errors.rs  events.rs  mod.rs
contracts/src/utils/: access_control.rs  mod.rs  monitor.rs  multisig.rs  pausable.rs  rate_limiter.rs  reentrancy_guard.rs  slippage_protection.rs  strategy_security.rs  validator_registry.rs
contracts/tests/: lib.rs  property_tests.rs
contracts/tests/e2e/: full_user_journey.rs  mod.rs  multi_user_scenario.rs  stress_test.rs
contracts/tests/helpers/: assertions.rs  data_generators.rs  mod.rs  setup.rs  utils.rs
contracts/tests/integration/: compound_integration.rs  mod.rs  staking_integration_tests.rs  strategy_integration.rs  vault_integration.rs  vault_integration_tests.rs
contracts/tests/mocks/: mock_dex.rs  (+5 more)
(+139 files in other folders)
